--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -32,12 +32,12 @@
 					<div>
 						<h3>Most Viewed Pages</h3>
 					</div>
-	        {% if pages %}
+	         	   {% if pages %}
 	             	<ul>
 	                 {% for page in pages %}
 	                 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
 	                 {% endfor %}
-	                </ul>
+	             </ul>
 	        {% else %}
 	             <strong>There are no categories present.</strong>
 	        {% endif %}
@@ -45,8 +45,9 @@
 
 
 		<div>
-        <a href="/rango/about/">About Rango</a><br />
-        <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
-	</div>
+        	<a href="/rango/about/">About Rango</a><br />
+			<a href="/rango/add_category/">Add a New Category</a><br />
+        	<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+		</div>
     </body>
 </html>
