--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,20 +1,14 @@
-<!DOCTYPE HTML>
+{% extends 'rango/base.html' %}
+	{% load staticfiles %}
+	{% block title_block %}
+		About
+	{% endblock %}
 
-{% load staticfiles %}
-
-<html>
-    
-    <head>
-        <title>Rango - About</title>
-    </head>
-    
-    <body>
-        <h1>About Page</h1>
-        This tutorial has been put together by: Peter Maltzoff 
-        <a href="/rango/">Home</a><br />
-        <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
-	<p>
-	<img src="{{MEDIA_URL}}cat.jpg" alt="Silly cat">
-	<p>
-    </body>
-</html>
+	{% block body_block %}
+        <div>
+	        <h1 class="page-header">About Page</h1>
+	        This tutorial has been put together by: Peter Maltzoff		</div>
+		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+		<p>
+		<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a silly cat">
+	{% endblock %}
