--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-{% load staticfiles %}
+{% extends 'rango/base.html' %}
+	{% load staticfiles %}
+	{% block title_block %}
+		Index
+	{% endblock %}
 
-<html>
-
-    <head>
-        <title>Rango</title>
-    </head>
-
-    <body>
-        <h1>Rango says...</h1>
+	{% block body_block %}
+		<h1>Rango says...</h1>
         <div>
 			hey there partner!
 		</div>
@@ -19,7 +16,7 @@
          	{% if categories %}
              <ul>
                  {% for category in categories %}
-                 <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+                 <li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
                  {% endfor %}
              </ul>
         {% else %}
@@ -45,7 +42,61 @@
 
 
 		<div>
-        	<a href="/rango/about/">About Rango</a><br />
+        	<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+
+	{% endblock %}
+
+
+
+<!--
+<!DOCTYPE html>
+{% load staticfiles %}
+
+<html>
+
+    <head>
+        <title>Rango</title>
+    </head>
+
+    <body>
+        <h1>Rango says...</h1>
+        <div>
+			hey there partner!
+		</div>
+		<div>
+			<div>
+				<h3>Most Liked Categories</h3>
+			</div>
+         	{% if categories %}
+             <ul>
+                 {% for category in categories %}
+                 <li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
+                 {% endfor %}
+             </ul>
+        {% else %}
+             <strong>There are no categories present.</strong>
+        {% endif %}
+			</div>
+
+				<div>
+
+					<div>
+						<h3>Most Viewed Pages</h3>
+					</div>
+	         	   {% if pages %}
+	             	<ul>
+	                 {% for page in pages %}
+	                 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+	                 {% endfor %}
+	             </ul>
+	        {% else %}
+	             <strong>There are no categories present.</strong>
+	        {% endif %}
+				</div>
+
+
+		<div>
+        	<a href="{% url 'rango.views.about' %}">About Rango</a><br />
 			<a href="/rango/add_category/">Add a New Category</a><br />
         	<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
 		</div>
