--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -5,9 +5,13 @@
 	{% endblock %}
 
 	{% block body_block %}
-		<h1>Rango says...</h1>
+	<p> visits: {{ visits }}</p>	<h1>Rango says...</h1>
         <div>
-			hey there partner!
+			{% if user.is_authenticated %}
+				howdy {{ user.username }}!
+			{% else %}
+				hey there partner!
+			{% endif %}
 		</div>
 		<div>
 			<div>
