--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,7 +5,7 @@
 	{% endblock %}
 
 	{% block body_block %}
-    <p> visits: {{ visits }}</p>    <div>
+        <div>
 	        <h1 class="page-header">About Page</h1>
 	        This tutorial has been put together by: Peter Maltzoff		</div>
 		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
